@startuml

title __EXO1SERVEUR's Class Diagram__\n

  package exo1.exo1serveur {
    class Application {
        {static} - PORT : int
        {static} + main()
    }
  }
  

  package exo1.exo1serveur {
    class Serveur {
        - listen_socket : ServerSocket
        ~ Serveur()
        + run()
        # finalize()
    }
  }
  

  package exo1.exo1serveur {
    class ServiceInversion {
        {static} - cpt : int
        - numero : int
        - client : Socket
        ~ ServiceInversion()
        + run()
        # finalize()
        + toString()
        + lancer()
    }
  }
  

  Serveur -up-|> Runnable
  ServiceInversion -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
